# AxiSEM3D

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  environment.yml
.github/workflows/: docker.yml  linux.yml
cmake/: FindFFTW3.cmake  FindMETIS.cmake  FindNetCDF.cmake  diff_test.sh  normalize_screen_output.sh  run_test.cmake
doc/logo/: style.md
doc/sphinx/source/: glossary.md  intro.md
doc/sphinx/source/installation/solver/: example-install-cases.md  index.md  local.md
doc/sphinx/source/user/examples/: examples.md
doc/sphinx/source/user/solver/: example.md  y_output.md  y_source.md
examples/00_global_1D/: README.md
examples/01_S362ANI_EMC_global/: README.md
examples/01_S362ANI_EMC_global/input1D/: inparam.output.yaml
examples/02_3d_crust_S362ANI_regional/: README.md
examples/02_3d_crust_S362ANI_regional/input_share/: inparam.nr.yaml  inparam.output.yaml
examples/03_salt_body_SEG_local/: README.md
examples/03_salt_body_SEG_local/input1D/: inparam.output.yaml
examples/03_salt_body_SEG_local/input3D/: inparam.output.yaml  inparam.source.yaml
examples/04_simple_3d_shapes/: Example_4_README.ipynb  README.md
examples/04_simple_3d_shapes/example_input_cartesian/: gen_blob.py  inparam.nr.yaml  inparam.output.yaml  inparam.source.yaml
examples/04_simple_3d_shapes/example_release_paper/: reproduce_paper_figure.py
examples/04_simple_3d_shapes/example_release_paper/input/: inparam.nr.yaml
examples/04_simple_3d_shapes/example_single_plume/: gen_mesh.sh  gen_movie.py  gen_plume.py  homogenous_global.e  inparam.nr.yaml  inparam.output.yaml  inparam.source.yaml
examples/04_simple_3d_shapes/src/: injector.py
examples/05_anisotropy_global/: README.md  run_case.sh
examples/05_anisotropy_global/2012-07-03_paper_example_50s/sim_US32_olivineE/input/: inparam.nr.yaml  inparam.output.yaml
examples/05_anisotropy_global/2012-07-03_paper_example_50s/sim_US32_olivineE_fullNU/input/: inparam.nr.yaml  inparam.source.yaml
examples/05_anisotropy_global/PREM_anisotropy_w_and_wo_full_Cij_50s/: README.md
examples/05_anisotropy_global/PREM_anisotropy_w_and_wo_full_Cij_50s/sim1_ani_prem_mesh/input/: inparam.nr.yaml  inparam.output.yaml
examples/05_anisotropy_global/PREM_anisotropy_w_and_wo_full_Cij_50s/sim2_iso_prem_mesh_plus_ani/input/: inparam.nr.yaml
examples/05_anisotropy_global/deep_mantle_anisotropy_full_Cij_50s/: README.md
examples/05_anisotropy_global/deep_mantle_anisotropy_full_Cij_50s/sim_lowermost_mantle_ani/input/: inparam.source.yaml
examples/06_finite_source_local/input/: inparam.nr.yaml  inparam.output.yaml
examples/07_ambient_noise_global/: README.md
examples/08_atmosphere_Mars_global/: README.md
examples/08_atmosphere_Mars_global/axisem3d_mars_atm/input/: inparam.nr.yaml  inparam.output.yaml  inparam.source.yaml
examples/09_icesheet_regional/: README.md
examples/09_icesheet_regional/input/: 2D_surface_topography.nc  3Dstations.txt  Cadek_basal_topography.nc  Enceladus.bm  enceladus_2s_chunk.e  enceladus_5s.e  inparam.model.yaml  inparam.output.yaml  inparam.source.yaml  surface_topography.nc
examples/11_wave_visualization_Moon/: README.md
examples/adrian_kernel_1D/: .gitignore  compute_kernels.py  readme.txt  run.sh
examples/adrian_kernel_1D/input_backward/: PLACEHOLDER.txt
examples/adrian_kernel_1D/input_forward/: inparam.model.yaml  inparam.nr.yaml  inparam.output.yaml  prem_iso_elastic.bm  prem_iso_elastic_30s.e  prem_iso_elastic_40s.e  prem_iso_elastic_50s.e
examples/adrian_kernel_3D/: .gitignore  clean.sh  compute_kernels_3D.py  convert_s362ani_to_radius.py  create_moho_topography.py  readme.txt  run.sh
examples/adrian_kernel_3D/input_forward/: STA_10DEG_GRID.txt  inparam.advanced.yaml  inparam.model.yaml  inparam.nr.yaml  inparam.source.yaml  moho_topography.nc  prem_iso_elastic.bm  prem_iso_elastic_50s.e
examples/template_develop/input/: item_elements_mantle.yaml  item_source_VIR.yaml  item_stations_GSN.yaml
src/preloop/mesh/: LocalMesh.cpp
src/preloop/mesh/topology/: metis.cpp  metis.hpp  vicinity.cpp
src/shared/io/: io.cpp
src/shared/io/netcdf/: NetCDF_Writer.hpp
tests/: README.md
tests/00_global_1D/: screen-output
tests/00_global_1D/input/: inparam.source.yaml  inparam.source.yaml~
tests/00_global_1D/reference/stations/USArray_transportable/: data_time.ascii
tests/01_S362ANI_EMC_global/: config.txt  screen-output
tests/01_S362ANI_EMC_global-coarse/: config.txt  screen-output
tests/01_S362ANI_EMC_global-coarse/input/: global_mesh__prem_ani__300s.e  inparam.model.yaml  inparam.nr.yaml  inparam.source.yaml
tests/01_S362ANI_EMC_global-coarse/reference/stations/global_seismic_network_GSN/: IU.WCI.ascii
tests/01_S362ANI_EMC_global/input/: inparam.source.yaml
tools/docker/: Dockerfile  readme.md
tools/installation_scripts/: build_axisem3d_stampede3.sh  tiger3_config
